installed bootstarp and font awesome

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Toolbar -->
-<div class="text-align:center">
+<div>
   <h1>
-    Welcome to {{ title }}
+    {{ title }}
   </h1>
   <app-value></app-value>
 </div>
